# codefun

./: .gitignore  README.md  commit.sh
clang_tidy/custom/: CMakeLists.txt  CustomTidyModule.cpp  README_taikt  SingleReturnCheck.cpp  SingleReturnCheck.h
cpp/cmake/binary/: CMakeLists.txt
cpp/cmake/binary/include/: foo.h
cpp/pattern/async/: CMakeLists.txt
cpp/pattern/async/doc/: BaseApplication.dox  Core.dox  ExecutionFlow.dox  Logging.dox  Types.dox
cpp/pattern/async/include/nf/: ApplicationOptions.h  AsioIoService.h  Assert.h  Async.h  BaseApplication.h  ByteArray.h  ChronoIoStream.h  Composition.h  ContainerAlgorithms.h  ContainerIoStream.h  ContextItem.h  Demangle.h  Executor.h  FunctionTraits.h  LinuxSignal.h  MulticastPromise.h  RaiiToken.h  RwLock.h  Singleton.h  Thread.h  TypeTraits.h
cpp/pattern/async/src/nf/: ApplicationOptions.cpp  Assert.cpp  ByteArray.cpp  Context.cpp  DataSize.cpp  Framework.cpp  Function.cpp  IoWatch.cpp  RwLock.cpp  Singleton.cpp  SuspendableLogger.cpp  Thread.cpp  Timer.cpp  Version.cpp
cpp/pattern/async/test/: bft_ByteArray.cpp  bft_Function.cpp  test_Attribute.cpp  test_ByteArray.cpp  test_ChronoIoStream.cpp  test_ContainerAlgorithms.cpp  test_ContainerIoStream.cpp  test_Context.cpp  test_DataSize.cpp  test_Demangle.cpp  test_Enums.cpp  test_Function.cpp  test_FunctionTraits.cpp  test_OptionalIoStream.cpp  test_Printable.cpp  test_Thread.cpp
cpp/pattern/async/test/cpp20/: test_Chrono.cpp
cpp/pattern/dispatcher/: CMakeLists.txt  README
cpp/pattern/dispatcher/common/: requestMsg.proto
cpp/pattern/dispatcher/include/: Dispatcher.h  JobQueue.h  Message.h  MsgWorkerThread.h  Promise.h  TaskWorkerThread.h
cpp/pattern/dispatcher/lib/: CMakeLists.txt
cpp/pattern/dispatcher/lib/include/: Dispatcher.h  Handler.h  JobQueue.h  Message.h  MsgWorkerThread.h  Promise.h  TaskWorkerThread.h
cpp/pattern/dispatcher/lib/src/: Dispatcher.cpp  JobQueue.cpp  MsgWorkerThread.cpp
cpp/pattern/dispatcher/src/: Dispatcher.cpp  MsgWorkerThread.cpp  TaskWorkerThread.cpp  main.cpp
cpp/pattern/dispatcher/test_app/: CMakeLists.txt  README.txt
cpp/pattern/dispatcher/test_app/src/: main.cpp
cpp/pattern/dispatcher_v2/lib/: CMakeLists.txt  Doxyfile
cpp/pattern/dispatcher_v2/lib/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  Continuation_8h.html  Continuation_8h__dep__incl.map  Continuation_8h__dep__incl.md5  Continuation_8h__incl.map  Continuation_8h__incl.md5  Continuation_8h_source.html  Dispatcher_8cpp.html  Dispatcher_8cpp__incl.map  Dispatcher_8cpp__incl.md5  Dispatcher_8h.html  Dispatcher_8h__dep__incl.map  Dispatcher_8h__dep__incl.md5  Dispatcher_8h__incl.map  Dispatcher_8h__incl.md5  Dispatcher_8h_source.html  Handler_8h.html  Handler_8h__dep__incl.map  Handler_8h__dep__incl.md5  Handler_8h__incl.map  Handler_8h__incl.md5  Handler_8h_source.html  Invocator_8h.html  Invocator_8h__dep__incl.map  Invocator_8h__dep__incl.md5  Invocator_8h__incl.map  Invocator_8h__incl.md5  Invocator_8h_source.html  JobQueue_8cpp.html  JobQueue_8cpp__incl.map  (+163 more)
cpp/pattern/dispatcher_v2/test_app/: CMakeLists.txt
cpp/pattern/looper_executor/: CMakeLists.txt  Handler.cpp  Handler.h  LooperThread.h  Message.cpp  Message.h  MessageQueue.cpp  MessageQueue.h  SLLooper.cpp  SLLooper.h  SLLooperThread.cpp  SLLooperThread.h
cpp/pattern/looper_executor/include/: Handler.h  Message.h  MessageQueue.h  SLLooper.h  myhandler.h
cpp/pattern/looper_executor/src/: Handler.cpp  Message.cpp  MessageQueue.cpp  SLLooper.cpp  main.cpp  myhandler.cpp
cpp/pattern/stuck_detector/interface/: Makefile.am  StuckDetectorProxy.cpp  configure.ac.add  stuckdetector-interface.json
cpp/pattern/stuck_detector/service/: AcceptorHandler.cpp  AcceptorHandler.h  CommData.h  Dispatcher.cpp  Dispatcher.hpp  EventNotifier.cpp  EventNotifier.h  IEventHandler.h  JobQueue.cpp  JobQueue.hpp  Makefile.am  Reactor.cpp  Reactor.h  ReaderHandler.cpp  ReaderHandler.h  StuckController.cpp  StuckDetectorManager.cpp  StuckDetectorManager.h  StuckDetector_main.cpp  TraceDataManager.cpp  WorkerThread.cpp  WorkerThread.hpp  connectionManager.cpp  connectionManager.h
deepl/mcp_server/: .gitignore  INSTALL.md  README.md  deployment.md  install_mcp.ps1  install_mcp.sh  mcp.json  mcp_linux.json  mcp_win.json  pyproject.toml
deepl/mcp_server/doc/: Deployment.md  MCP_server_internal_component.puml  MCP_server_prompt_check_races_sequence_v2.puml  MCP_server_prompt_check_resources_sequence_v2.puml  SETUP_COMPLETE.md  Setup.md  file_selection.md  mcp_internal_component.puml  mcp_prompt_check_leaks_sequence.puml  mcp_prompt_check_leaks_sequence_simple.puml  mcp_prompt_check_resources_sequence.puml  mcp_prompt_check_resources_sequence_simple.puml  mem_prompt.md  mem_report.md  mem_workflow.md  mem_workflow_simple.md  modular.md  race_condition.md  race_condition_simple.md  race_condition_workflow.md  test_race_condition.md
deepl/mcp_server/doc/design/: mcp_internal_component.puml  mcp_prompt_check_leaks_sequence.puml  mcp_prompt_check_races_sequence.puml  mcp_prompt_check_races_sequence_simple.puml  mcp_prompt_check_resources_sequence.puml
deepl/mcp_server/lgedv/: MIGRATION_SUMMARY.md  __init__.py  server.py  test_new_tools.py
deepl/mcp_server/lgedv/analyzers/: __init__.py  memory_analyzer.py  race_analyzer.py  resource_analyzer.py
deepl/mcp_server/lgedv/doc/: MCP_server_get_prompt_sequence.puml  MCP_server_tool_call_sequence.puml
deepl/mcp_server/lgedv/handlers/: __init__.py  prompt_handlers.py  resource_handler.py  temp  tool_handlers.py
deepl/mcp_server/lgedv/modules/: __init__.py  config.py  data_models.py  file_utils.py  persistent_storage.py  report.py  report_leak.py  report_race.py  report_resource.py  report_rule.py  rule_fetcher.py
deepl/mcp_server/lgedv/prompts/: prompt_templates.py
deepl/mcp_server/lgedv/resources/: CustomRule.md  LGEDVRuleGuide.md  Misracpp2008Guidelines_en.md
deepl/mcp_server/report/: report_http.py
deepl/mcp_server/tmp/: mem_prompt.md  race_prompt.md  resource_prompt.md
deepl/mcp_server/tmp/src/: t1.cpp  t10.cpp  t11.cpp  t13.cpp  t4.cpp  t5.cpp
(+1260 files in other folders)
